Attempt to fix cumulative layout shift score (#9)

--- a/components/highlight-list/highlight-list.scss
+++ b/components/highlight-list/highlight-list.scss
@@ -3,6 +3,11 @@
 .highlight-list {
   @extend .member-status-list;
 
+  &__container {
+    display: block;
+    min-height: 100vh;
+  }
+
   &__date-label {
     display: flex;
     width: 100%;
